// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduling service adds a scheduled flight 1`] = `
Array [
  Object {
    "__typename": "ScheduledFlightAdded",
    "id": Any<String>,
    "payload": Object {
      "add": Object {
        "day": "2021-06-11",
        "scheduledArrival": 2021-06-12T02:30:00.000Z,
        "scheduledDeparture": 2021-06-11T20:30:00.000Z,
      },
      "flightNo": "PA576",
    },
    "time": Any<Date>,
  },
]
`;

exports[`Scheduling service creates a flight 1`] = `
Array [
  Object {
    "__typename": "FlightCreated",
    "id": Any<String>,
    "payload": Object {
      "aircraftType": "B787-9",
      "destination": "MIA",
      "flightNo": "PA576",
      "origin": "SFO",
    },
    "time": Any<Date>,
  },
]
`;

exports[`Scheduling service should reduce aggregate state from events 1`] = `
Object {
  "aircraftType": "B787-9",
  "days": Map {
    "2021-06-11" => Object {
      "scheduledArrival": 2021-06-12T02:30:00.000Z,
      "scheduledDeparture": 2021-06-11T20:30:00.000Z,
    },
  },
  "destination": "MIA",
  "flightNo": "PA576",
  "origin": "SFO",
}
`;
